@startuml
skinparam classAttributeIconSize 0

class FarmaciaDB {
    +generateGrafo()
    +getFarmaciaProxima(graph, enderecoCliente)
}

class Farmacia {
  -Integer nif
  -String email
  -String morada
  +Farmacia(nif,email,morada)
}

class PedirItemFarmaciaController {
    +generateGrafo()
    +getFarmaciaProxima(graph,end)
}

class RealizarEncomendaUI {
}

RealizarEncomendaUI ..> PedirItemFarmaciaController
PedirItemFarmaciaController ..> FarmaciaDB

FarmaciaDB "1" --> "*" Farmacia : tem registadas

@enduml
